On pasting the html content to Words handle the lists by adding it to the KoTextDocument.

BUG: 290547